--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/update-blog-list",
-      "schedule": "0/10 * * * *"
+      "schedule": "0/10 * * *"
     }
   ]
 }
